# core

./: BloodResourceFactory.cpp  BloodService.cpp  BloodServiceSettingsFactory.cpp  CMakeLists.txt  README.md  main.cpp
include/: BloodResourceFactory.h  BloodService.h  BloodServiceSettingsFactory.h  IService.h
